made updates to login page

--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,15 @@ Developer @GA in NYC
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+
+.username {
+
+};
+
+.password {
+
+};
+
+.button {
+
+};
