--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 
 body {
   background-image: url('/images/pattern.svg');
-
+  font-family: "Open Sans", sans-serif;
 }
 
 #container {
   width: 350px;
   height: 200px;
-  background-color: grey;
+  background-color: #DCE0D9;
   margin: 0 auto;
 }
 
