--- a/views/login.html
+++ b/views/login.html
@@ -9,12 +9,16 @@
 
 
 <body>
+  <header>
+    <h1>Startup Matchmaker</h1>
+  </header>
   <div id="container">
   </div>
 
 
 
   <footer>
+    <p id="copyright">&copy; 2015 Startup Matchmaker. Made in LA.</p>
   </footer>
 
 <script src="/js/controllers/login-view-controller.js"></script>
