--- a/views/login.html
+++ b/views/login.html
@@ -20,7 +20,7 @@
   <footer>
     <p id="copyright">&copy; 2015 Startup Matchmaker. Made in LA.</p>
   </footer>
-
+<script src="/js/xhr.js"></script>
 <script src="/js/controllers/login-view-controller.js"></script>
 </body>
 
