--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,92 @@ body {
 .button {
 
 }
+
+/** Following CSS is for splash page
+
+**/
+
+header {
+  width: 100%;
+  height: 10%;
+  text-align: center;
+  background: #DCE0D9;
+}
+
+h1 {
+  padding-top: 2%;
+  color: #BC261D;
+}
+
+#meetMatch {
+  float: right;
+  width: 100%;
+}
+
+#matchContent {
+  float: right;
+  width: 30%;
+  padding-bottom: 3%;
+  color: #DCE0D9;
+}
+
+#meetMatch h1 {
+  color: #DCE0D9;
+}
+
+#meetMatch h3 {
+  display: inline-block;
+  padding-right: 3%;
+  background: #BC261D;
+  width: 40%;
+  text-align: center;
+  border-radius: 4px;
+}
+
+#meetMatch h3 a {
+  text-decoration: none;
+  color: #DCE0D9;
+}
+
+
+#tagLine {
+  clear: both;
+  background:#FFFFFF;
+  width: 100%;
+  height: 15%;
+  padding-top: 0.75%;
+  padding-bottom: 1%;
+}
+
+#tagLine h1 {
+  text-align: center;
+  color: black;
+}
+
+#createProfile {
+  float: left;
+  width: 30%;
+  padding-left: 3%;
+}
+
+#findDeveloper {
+  float: right;
+  width: 30%;
+  padding-right: 3%;
+}
+
+#findDesigner {
+  float: right;
+  width: 30%;
+  padding-right: 3%;
+}
+
+footer {
+  position: fixed;
+  width: 100%;
+  height: 10%;
+  clear: both;
+  margin-top: 30%;
+  text-align: center;
+  background: #DCE0D9;
+}
