--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 body {
   background-image: url('/images/pattern.svg');
   font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  margin-top: 0px;
 }
 
 #container {
@@ -32,22 +34,28 @@ header {
   height: 10%;
   text-align: center;
   background: #DCE0D9;
+  margin-top: 0;
 }
 
 h1 {
-  padding-top: 2%;
+  padding-top: 1%;
   color: #BC261D;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  margin-top: 0px;
 }
 
 #meetMatch {
   float: right;
   width: 100%;
+  margin-top: 4%;
 }
 
 #matchContent {
   float: right;
-  width: 30%;
+  width: 32%;
   padding-bottom: 3%;
+  margin-right: 3%;
   color: #DCE0D9;
 }
 
@@ -57,11 +65,14 @@ h1 {
 
 #meetMatch h3 {
   display: inline-block;
-  padding-right: 3%;
+  padding-right: 5px;
   background: #BC261D;
-  width: 40%;
+  width: 35%;
+  padding-top: 3px;
+  padding-bottom: 5px;
   text-align: center;
   border-radius: 4px;
+  margin-right: 20px;
 }
 
 #meetMatch h3 a {
