--- a/views/team.html
+++ b/views/team.html
@@ -3,12 +3,13 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="/css/team.css">
   <title>Startup Matchmaker</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600' rel='stylesheet' type='text/css'>
     <script src="/js/components/team.js"></script>
 </head>
 
-<body>
+<body >
 
   <header>
     <h1>Startup Matchmaker</h1>
@@ -16,7 +17,7 @@
   </header>
 
   <div id="nav"></div>
-
+  <div id="gallery-container"></div>
 
 
   <footer>
