--- a/css/base/splash.css
+++ b/css/base/splash.css
@@ -12,7 +12,7 @@ body {
   width: 100%;
   margin-top: 4%;
   font-weight: 400;
-  font-size: 25px;
+  font-size: 1.5em;
 }
 
 #matchContent {
@@ -53,7 +53,7 @@ body {
   background:#FFFFFF;
   width: 100%;
   height: 15%;
-  font-size: 28px;
+  font-size: 1.8em;
   padding-top: 0.75%;
   padding-bottom: 1%;
 }
@@ -92,7 +92,7 @@ body {
 }
 
 .moreInfo h1 {
-  font-size: 28px;
+  font-size: 1.5em;
   color: #DCE0D9;
   font-weight: 400;
 }
@@ -127,5 +127,5 @@ footer {
   padding-bottom: 1%;
   text-align: center;
   background: #FFFFFF;
-  font-size: 25px;
+  font-size: 1.5em;
 }
