--- a/views/team.html
+++ b/views/team.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/team.css">
   <title>Startup Matchmaker</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600' rel='stylesheet' type='text/css'>
@@ -13,7 +14,7 @@
 
   <header>
     <h1>Startup Matchmaker</h1>
-    <h3>Logout</h3>
+    <h4>Logout</h4>
   </header>
 
   <div id="nav"></div>
