--- a/views/login.html
+++ b/views/login.html
@@ -4,6 +4,7 @@
 
 <head>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/login.css">
   <script src="/js/components/login.js"></script>
 </head>
 
