--- a/views/signup.html
+++ b/views/signup.html
@@ -3,7 +3,9 @@
 <html>
 
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/signup.css">
   <script src="/js/components/signup.js"></script>
 </head>
 
