--- a/css/login.css
+++ b/css/login.css
@@ -6,21 +6,21 @@ body {
 }
 
 #container {
-  width: 475px;
-  height: 300px;
+  width: 24%;
+  height: 35%;
   background-color: #DCE0D9;
   margin: 0 auto;
-  padding: 25px;
-  padding-top: 15px;
+  padding: 1%;
 }
 
 #name {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
-  width: 450px;
-  height: 50px;
-  font-size: 25px;
+  width: 98%;
+  height: 2em;
+  font-size: 1.5em;
   font-weight: 300;
   margin-bottom: 10px;
 }
@@ -28,10 +28,11 @@ body {
 #pass {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
-  width: 450px;
-  height: 50px;
-  font-size: 25px;
+  width: 98%;
+  height: 2em;
+  font-size: 1.5em;
   font-weight: 300;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -40,23 +41,26 @@ body {
 #loginButton {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
-  width: 450px;
-  height: 50px;
+  width: 98%;
+  height: 2em;
   text-align: center;
-  font-size: 25px;
+  font-size: 1.5em;
   font-weight: 300;
   background-color: #BC261D;
   color: #FFFFFF;
   margin-top: 10px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 footer a {
   margin-top: 10px;
-  font-size: 25px;
+  font-size: 1.5em;
   text-decoration: none;
   color: #BC261D;
+  cursor: pointer;
 }
 
 footer #copyright{
