--- a/css/signup.css
+++ b/css/signup.css
@@ -7,21 +7,21 @@ body {
 
 
 #container {
-  width: 475px;
-  height: 550px;
+  width: 24%;
+  height: 55%;
   background-color: #DCE0D9;
   margin: 0 auto;
-  padding: 25px;
-  padding-top: 15px;
+  padding: 1%;
 }
 
 #email {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
-  width: 450px;
-  height: 50px;
-  font-size: 25px;
+  width: 98%;
+  height: 2em;
+  font-size: 1.5em;
   font-weight: 300;
   margin-bottom: 10px;
 }
@@ -29,10 +29,11 @@ body {
 #name {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
-  width: 450px;
-  height: 50px;
-  font-size: 25px;
+  width: 98%;
+  height: 2em;
+  font-size: 1.5em;
   font-weight: 300;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -41,10 +42,11 @@ body {
 #pass {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
-  width: 450px;
-  height: 50px;
-  font-size: 25px;
+  width: 98%;
+  height: 2em;
+  font-size: 1.5em;
   font-weight: 300;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -53,10 +55,11 @@ body {
 #firstName {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
-  width: 450px;
-  height: 50px;
-  font-size: 25px;
+  width: 98%;
+  height: 2em;
+  font-size: 1.5em;
   font-weight: 300;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -65,10 +68,11 @@ body {
 #lastName {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
-  width: 450px;
-  height: 50px;
-  font-size: 25px;
+  width: 98%;
+  height: 2em;
+  font-size: 1.5em;
   font-weight: 300;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -78,22 +82,24 @@ body {
   padding-top: 2%;
   padding-bottom: 1%;
   border-radius: 10px;
-  width: 450px;
-  height: 50px;
+  width: 98%;
+  height: 2em;
   text-align: center;
-  font-size: 25px;
+  font-size: 1.5em;
   font-weight: 300;
   background-color: #BC261D;
   color: #FFFFFF;
   margin-top: 10px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 footer a {
   margin-top: 10px;
-  font-size: 25px;
+  font-size: 1.5em;
   text-decoration: none;
   color: #BC261D;
+  cursor: pointer;
 }
 
 footer #copyright{
