--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,9 @@
 <head>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/login.css">
+  <script src="/js/xhr.js"></script>
   <script src="/js/components/login.js"></script>
+
 </head>
 
 
@@ -21,7 +23,7 @@
   <footer>
     <p id="copyright">&copy; 2015 Startup Matchmaker. Made in LA.</p>
   </footer>
-<script src="/js/xhr2.js"></script>
+
 <script src="/js/controllers/login-view-controller.js"></script>
 </body>
 
