made progress on team page!

--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,13 @@ h1 {
   font-weight: 300;
   margin-top: 0px;
 }
+
+a {
+  text-decoration: none;
+  color: #BC261D;
+}
+
+a:visited {
+    text-decoration: none;
+    color: #BC261D;
+}
