--- a/views/team.html
+++ b/views/team.html
@@ -14,7 +14,7 @@
 
   <header>
     <h1>Startup Matchmaker</h1>
-    <h4>Logout</h4>
+    <h4><a href="login.html">Logout</a></h4>
   </header>
 
   <div id="nav"></div>
