--- a/css/team.css
+++ b/css/team.css
@@ -4,9 +4,10 @@ header {
   color: #BC261D;
 }
 
+
 #nav {
   width: 20%;
-  height: 600px;
+  height: 900px;
   background: #DCE0D9;
   float: left;
 
@@ -18,7 +19,7 @@ header {
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    height: 600px;
+    height: 900px;
     width: 80%;
     float: right;
 }
@@ -33,6 +34,13 @@ header h4 {
   float: right;
   margin-right: 20px;
 
+}
+
+h5 {
+  color: #000000;
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.5em;
 }
 
 .team-controller {
@@ -54,16 +62,42 @@ header h4 {
 }
 
 .team-controller .add {
-  width: 65px;
-  height: 65px;
+  width: 50px;
+  height: 50px;
   margin-top: 5px;
   margin-left: 20px;
   background-size: cover;
   background-repeat: no-repeat;
-  background: url('/images/plus-sign.svg');
+  background-image: url('/images/plus-sign.svg');
   -webkit-transform: translate(16px, 14px);
   transform: translate(16px, 14px);
 
   cursor: pointer;
+}
 
+.avatar {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  margin-top: 50px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+li {
+  width: 30%;
+  height: 300px;
+  background: #FFFFFF;
+  border-radius: 8px;
+  float: left;
+  margin: 20px;
+  color: #000000;
+}
+
+li img {
+  text-align: center;
 }
