--- a/views/team.html
+++ b/views/team.html
@@ -8,6 +8,7 @@
   <title>Startup Matchmaker</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600' rel='stylesheet' type='text/css'>
     <script src="/js/components/team.js"></script>
+    <script src="/js/xhr.js"></script>
 </head>
 
 <body >
