--- a/css/team.css
+++ b/css/team.css
@@ -43,6 +43,7 @@ h5 {
   text-align: center;
   font-weight: 400;
   font-size: 1.5em;
+  margin-top: 10px;
 }
 
 .team-controller {
@@ -87,8 +88,8 @@ h5 {
 }
 .avatar {
   border-radius: 50%;
-  height: 100px;
-  width: 100px;
+  height: 150px;
+  width: 150px;
   margin-top: 50px;
 }
 
@@ -110,4 +111,30 @@ ul {
 
 .gallery img {
   text-align: center;
+}
+
+.drag {
+    height: 80px;
+    width: 100px;
+    background-color: blue;
+    border: 1px solid black;
+    color: #ccc;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+.drag2 {
+    height: 80px;
+    width: 80px;
+    background-color: green;
+    border: 1px solid black;
+    color: #ccc;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+.droppable {
+    height: 160px;
+    width: 200px;
+    background-color: purple;
+    margin-bottom: 20px;
+    padding: 10px;
 }
