--- a/css/team.css
+++ b/css/team.css
@@ -8,11 +8,23 @@ body {
   margin: 0;
 }
 
-#nav {
-  width: 20%;
-  height: 50%;
-  background: #DCE0D9;
-  float: left;
+header h1 {
+  display: inline;
+}
+
+header h4 {
+  font-weight: 300;
+  display: inline;
+  float: right;
+  margin-right: 20px;
+}
+
+h5 {
+  color: #000000;
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.5em;
+  margin-top: 10px;
 }
 
 #gallery-container {
@@ -26,39 +38,27 @@ body {
     text-align: center;
 }
 
-header h1 {
-  display: inline;
+#nav {
+  width: 20%;
+  height: 100%;
+  background: #DCE0D9;
+  float: left;
 }
 
-header h4 {
-  font-weight: 300;
-  display: inline;
-  float: right;
-  margin-right: 20px;
-
+.wrapper {
+  display: inline-block;
+  height: 60px;
+  width: 100%;
 }
 
-h5 {
-  color: #000000;
-  text-align: center;
-  font-weight: 400;
-  font-size: 1.5em;
-  margin-top: 10px;
-}
-
-.team-controller {
+/*.team-controller {
   position: absolute;
   float:left;
   padding: 8px;
   height: 50px;
   width: 18%;
-}
-.wrapper {
-  display: inline-block;
-  height: 60px;;
-  width: 100%;
+}*/
 
-}
 .team-controller input[type=text] {
   border-radius: 8px;
   -webkit-appearance: none;
@@ -83,14 +83,11 @@ h5 {
   transform: translate(16px, 14px);
   cursor: pointer;
 }
+
 .constructorNames {
   margin-top:30px;
   margin-left:10px;
   color: #BC261D;
-}
-
-.constructorNames li {
-
 }
 
 .avatar {
@@ -122,9 +119,8 @@ ul {
 
 .drag {
     height: 80px;
-    width: 100px;
+    width: 100%;
     background-color: blue;
-    border: 1px solid black;
     color: #ccc;
     cursor: pointer;
     margin-bottom: 20px;
@@ -132,16 +128,13 @@ ul {
 .drag2 {
     height: 80px;
     width: 80px;
-    background-color: green;
-    border: 1px solid black;
-    color: #ccc;
     cursor: pointer;
     margin-bottom: 20px;
 }
+
 .droppable {
-    height: 160px;
-    width: 200px;
-    background-color: purple;
-    margin-bottom: 20px;
-    padding: 10px;
+  background: #DCE0D9;
+  height: 60px;
+  width: 100%;
+  border-bottom: solid #ffffff 1px;
 }
