--- a/css/team.css
+++ b/css/team.css
@@ -1,11 +1,12 @@
+body {
+  background: #DCE0D9;
+  margin: 0;
+}
+
 header {
   width: 100%;
   height: 100px;
   color: #BC261D;
-}
-
-body {
-  margin: 0;
 }
 
 header h1 {
@@ -28,20 +29,19 @@ h5 {
 }
 
 #gallery-container {
-    background-image: url('/images/pattern.svg');
-    margin: 0;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    height: 100%;
-    width: 80%;
-    float: right;
-    text-align: center;
+  background-image: url('/images/pattern.svg');
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 100%;
+  width: 80%;
+  float: right;
+  text-align: center;
 }
 
 #nav {
-  width: 20%;
   height: 100%;
-  background: #DCE0D9;
+  width: 20%;
   float: left;
 }
 
@@ -51,15 +51,8 @@ h5 {
   width: 100%;
 }
 
-/*.team-controller {
-  position: absolute;
-  float:left;
-  padding: 8px;
-  height: 50px;
-  width: 18%;
-}*/
-
 .team-controller input[type=text] {
+  float: left;
   border-radius: 8px;
   -webkit-appearance: none;
   border: 0 none;
@@ -74,8 +67,8 @@ h5 {
 .team-controller .add {
   width: 50px;
   height: 50px;
-  float: right;
-  margin-right:12px;
+  float: left;
+  margin-left:5px;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url('/images/plus-sign.svg');
@@ -85,8 +78,6 @@ h5 {
 }
 
 .constructorNames {
-  margin-top:30px;
-  margin-left:10px;
   color: #BC261D;
 }
 
@@ -104,7 +95,7 @@ ul {
 }
 
 .gallery li {
-  width: 30%;
+  width: 29%;
   height: 300px;
   background: #FFFFFF;
   border-radius: 8px;
@@ -113,28 +104,33 @@ ul {
   color: #000000;
 }
 
-.gallery img {
-  text-align: center;
-}
-
 .drag {
-    height: 80px;
-    width: 100%;
-    background-color: blue;
-    color: #ccc;
-    cursor: pointer;
-    margin-bottom: 20px;
-}
-.drag2 {
-    height: 80px;
-    width: 80px;
-    cursor: pointer;
-    margin-bottom: 20px;
+  height: 10px;
+  width: 10px;
 }
 
 .droppable {
-  background: #DCE0D9;
+  display: flex;
+  justify-content:center;
+  align-content:center;
+  flex-direction:column;
   height: 60px;
   width: 100%;
   border-bottom: solid #ffffff 1px;
+}
+
+.droppable div {
+  display: inline;
+  margin-left: 10px;
+}
+
+.droppable .avatar {
+  display: inline;
+  height: 45px;
+  width: 45px;
+  margin: 0;
+}
+
+.droppable h5 {
+  display: none;
 }
