--- a/views/team.html
+++ b/views/team.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    <p id="copyright">&copy; 2015 Startup Matchmaker. Made in LA.</p>
+    <!-- <p id="copyright">&copy; 2015 Startup Matchmaker. Made in LA.</p> -->
   </footer>
   <script src="/js/controllers/team-view-controller.js"></script>
 </body>
