--- a/css/team.css
+++ b/css/team.css
@@ -1,4 +1,3 @@
-
 header {
   width: 100%;
   height: 80px;
@@ -15,6 +14,18 @@ body {
   width: 20%;
   height: 900px;
   float: left;
+}
+
+#gallery-container {
+    background-image: url('/images/pattern.svg');
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100%;
+    width: 80%;
+    float: right;
+    text-align: center;
+}
 
 header h1 {
   display: inline;
@@ -25,6 +36,7 @@ header h4 {
   display: inline;
   float: right;
   margin-right: 20px;
+
 }
 
 h5 {
@@ -32,28 +44,22 @@ h5 {
   text-align: center;
   font-weight: 400;
   font-size: 1.5em;
-  margin-top: 10px;
 }
 
-#gallery-container {
-  background-image: url('/images/pattern.svg');
-  margin: 0;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  height: 100%;
-  width: 80%;
-  float: right;
-  text-align: center;
+.team-controller {
+  position: absolute;
+  float:left;
+  padding: 8px;
+  height: 50px;
+  width: 18%;
 }
-
 .wrapper {
   display: inline-block;
-  height: 60px;
+  height: 60px;;
   width: 100%;
-}
 
+}
 .team-controller input[type=text] {
-  float: left;
   border-radius: 8px;
   -webkit-appearance: none;
   border: 0 none;
@@ -68,8 +74,8 @@ h5 {
 .team-controller .add {
   width: 50px;
   height: 50px;
-  float: left;
-  margin-left:5px;
+  float: right;
+  margin-right:12px;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url('/images/plus-sign.svg');
@@ -77,22 +83,20 @@ h5 {
   transform: translate(16px, 14px);
   cursor: pointer;
 }
-
 .constructorNames {
+  margin-top:30px;
+  margin-left:10px;
   color: #BC261D;
 }
 
-<<<<<<< HEAD
 .constructorNames li {
-  line-height: 1.5em;
+  line-height: 2.2em;
 }
 
-=======
->>>>>>> master
 .avatar {
   border-radius: 50%;
-  height: 150px;
-  width: 150px;
+  height: 100px;
+  width: 100px;
   margin-top: 50px;
 }
 
@@ -103,7 +107,7 @@ ul {
 }
 
 .gallery li {
-  width: 29%;
+  width: 30%;
   height: 300px;
   background: #FFFFFF;
   border-radius: 8px;
@@ -112,40 +116,13 @@ ul {
   color: #000000;
 }
 
-.drag {
-  height: 10px;
-  width: 10px;
+.gallery img {
+  text-align: center;
 }
 
-.droppable {
-  display: flex;
-  justify-content:center;
-  align-content:center;
-  flex-direction:column;
-  height: 60px;
-  width: 100%;
-  border-bottom: solid #ffffff 1px;
-}
-
-.droppable div {
-  display: inline;
-  margin-left: 10px;
-}
-
-.droppable .avatar {
-  display: inline;
-  height: 45px;
-  width: 45px;
-  margin: 0;
-}
-
-.droppable h5 {
-  display: none;
-}
-
-footer {
+/*footer {
   clear: both;
   width: 100%;
   text-align: center;
   background: #FFFFFF;
-}
+}*/
