--- a/css/login.css
+++ b/css/login.css
@@ -17,6 +17,7 @@ body {
 #name {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
   width: 94%;
   height: 2em;
@@ -28,6 +29,7 @@ body {
 #pass {
   padding-top: 2%;
   padding-bottom: 1%;
+  padding-left: 3%;
   border-radius: 10px;
   width: 94%;
   height: 2em;
