--- a/css/signup.css
+++ b/css/signup.css
@@ -19,8 +19,8 @@ body {
   padding-top: 2%;
   padding-bottom: 1%;
   border-radius: 50%;
-  width: 80%;
-  height: 13em;
+  width: 14em;
+  height: 14em;
 }
 
 #chooseFile {
